UI: fixed navbar collapsed state

--- a/cms/cms-core/src/main/webapp/css/style.css
+++ b/cms/cms-core/src/main/webapp/css/style.css
@@ -403,7 +403,7 @@ li ol > li:before {
 }
 
 #navbar-main > div.content {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 2px;
 }
